[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scos-usrp"
dynamic = ["version"]
description = "USRP support for scos-sensor"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]


maintainers = [
    { name = "Doug Boulware", email = "dboulware@ntia.gov" },
    { name = "Justin Haze", email = "jhaze@ntia.gov" },
    { name = "Anthony Romaniello", email = "aromaniello@ntia.gov" },
]

keywords = [
    "SCOS", "SDR", "spectrum monitoring", "radio", "sensor",
    "spectrum", "monitoring", "remote", "distributed", "sensing",
    "NTIA", "ITS", "telecommunications", "USRP",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

dependencies = [
    "django>=3.2.15,<4.0",
    "environs>=9.0, <10.0",
    "numpy>=1.22.0",
    "scos_actions @ git+https://github.com/NTIA/scos-actions@5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
]
dev = [
    "scos-usrp[test]",
    "hatchling>=1.6.0,<2.0",
    "pre-commit>=2.20.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-usrp"
"Bug Tracker" = "https://github.com/NTIA/scos-usrp/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "scos_usrp/__init__.py"

[tool.isort]
known_third_party = ["django", "environs", "numpy", "pytest", "scos_actions"]
